--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <ul>
             <li><a href="index.html" class="active">Inicio<br></a></li>
             <li><a href="vecinos.html">Vecinos</a></li>
-            <li><a href="necesidades.html">Necesidades</a></li>
-            <li><a href="propuestas.html">Propuestas</a></li>
-            <li><a href="comunicacion.html">Comunicación</a></li>
+            <li><a href="#">Necesidades</a></li>
+            <li><a href="#">Propuestas</a></li>
+            <li><a href="#">Comunicación</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -280,7 +280,7 @@
                               </div>
                               <div class="portfolio-info">
                                   <h3>La voz de los jóvenes</h3>
-                                  <a href="" class="readmore stretched-link">Conocer más <i class="bi bi-arrow-right"></i></a>
+                                  <a href="#" class="readmore stretched-link">Conocer más <i class="bi bi-arrow-right"></i></a>
                               </div>
                           </div>
                       </div>
@@ -293,7 +293,7 @@
                               </div>
                               <div class="portfolio-info">
                                   <h3>La voz de las escuelas</h3>
-                                  <a href="" class="readmore stretched-link">Conocer más <i class="bi bi-arrow-right"></i></a>
+                                  <a href="#" class="readmore stretched-link">Conocer más <i class="bi bi-arrow-right"></i></a>
                               </div>
                           </div>
                       </div>
@@ -308,7 +308,7 @@
                               </div>
                               <div class="portfolio-info">
                                   <h3>La voz de la naturaleza</h3>
-                                  <a href="" class="readmore stretched-link">
+                                  <a href="#" class="readmore stretched-link">
                                       Conocer más <i class="bi bi-arrow-right"></i>
                                   </a>
                               </div>
@@ -322,7 +322,7 @@
                               </div>
                               <div class="portfolio-info">
                                   <h3>La voz de la naturaleza</h3>
-                                  <a href="" class="readmore stretched-link">
+                                  <a href="#" class="readmore stretched-link">
                                       Conocer más <i class="bi bi-arrow-right"></i>
                                   </a>
                               </div>
@@ -337,7 +337,7 @@
                               </div>
                               <div class="portfolio-info">
                                   <h3>La voz de los comerciantes</h3>
-                                  <a href="" class="readmore stretched-link">
+                                  <a href="#" class="readmore stretched-link">
                                       Conocer más <i class="bi bi-arrow-right"></i>
                                   </a>
                               </div>
